--- a/css/style.css
+++ b/css/style.css
@@ -220,12 +220,14 @@ body::selection {
 
 .content {
 	background-color: white;
-	width: 20%;
+	width: 25%;
 	float: left;
-	height: 84.9vh;
+	height: 83.6vh;
 	box-shadow: 0px 10px 12.5px 1px #f68934;
-	margin-left: 10%;
+	margin-left: 5%;
 	position: fixed;
+	padding: 10px;
+	padding-top: 0px;
 }
 
 .footer {
@@ -287,16 +289,19 @@ a:visited {
 	box-shadow: 0px 10px 12.5px 1px #082253;
 	background-color: white;
 	padding: 2vh;
+	background-image: url(../img/altaj.jpg);
 }
 
 .mountContent {
 	background-color: white;
-	width: 20%;
+	width: 25%;
 	float: left;
-	height: 84.9vh;
+	height: 83.6vh;
 	box-shadow: 0px 10px 12.5px 1px #082253;
-	margin-left: 10%;
+	margin-left: 5%;
 	position: fixed;
+	padding: 10px;
+	padding-top: 0px;
 }
 
 .forestInfo {
@@ -305,16 +310,21 @@ a:visited {
 	background-color: white;
 	height: 80.9vh;
 	padding: 2vh;
+	background-image: url(../img/zap.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
 }
 
 .forestContent {
 	background-color: white;
-	width: 20%;
+	width: 25%;
 	float: left;
-	height: 84.9vh;
+	height: 83.6vh;
 	box-shadow: 0px 10px 12.5px 1px #405e3e;
-	margin-left: 10%;
+	margin-left: 5%;
 	position: fixed;
+	padding: 10px;
+	padding-top: 0px;
 }
 
 .lakesInfo {
@@ -323,14 +333,55 @@ a:visited {
 	padding: 2vh;
 	box-shadow: 0px 10px 12.5px 1px #9bc6e0;
 	background-color: white;
+	background-image: url(../img/baikal.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
 }
 
 .lakesContent {
 	background-color: white;
-	width: 20%;
+	width: 25%;
 	float: left;
-	height: 84.9vh;
+	height: 83.9vh;
 	box-shadow: 0px 10px 12.5px 1px #9bc6e0;
-	margin-left: 10%;
+	margin-left: 5%;
 	position: fixed;
+	padding: 10px;
+	padding-top: 0px;
+}
+
+.content a:link {
+	color: blue;
+}
+
+.content a:visited {
+	color: #020068;
+}
+
+.forestContent a:link {
+	color: blue;
+}
+
+.forestContent a:visited {
+	color: #020068;
+}
+
+.lakesContent a:link {
+	color: blue;
+}
+
+.lakesContent a:visited {
+	color: #020068;
+}
+
+.mountContent a:link {
+	color: blue;
+}
+
+.mountContent a:visited {
+	color: #020068;
+}
+
+.text {
+	font-size: 12pt;
 }
