--- a/css/style.css
+++ b/css/style.css
@@ -333,7 +333,7 @@ a:visited {
 	padding: 2vh;
 	box-shadow: 0px 10px 12.5px 1px #9bc6e0;
 	background-color: white;
-	background-image: url(../img/baikal.jpg);
+	background-image: url(../img/Baikal.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 }
