--- a/css/BeachStyle.css
+++ b/css/BeachStyle.css
@@ -16,9 +16,9 @@ body::selection {
 
 #beachHeader {
 	background: linear-gradient(to right, #fdc830, #f37335);
-	height: 10vh;
+	height: 5rem;
 	text-align: center;
-	line-height: 10vh;
+	line-height: 5rem;
 }
 
 .header .first_list {
@@ -26,15 +26,15 @@ body::selection {
 	vertical-align: middle;
 	margin-top: 0px;
 	padding-left: 0px;
-	margin-left: 69px;
+	margin-left: 4.3125rem;
 }
 
 .header .main_li {
 	border-radius: 14px;
 	display: inline;
-	margin: 30px;
+	margin: 1.875rem;
 	font-size: 14pt;
-	padding: 10px;
+	padding: 0.625rem;
 	transition: background 0.3s linear;
 	color: #3A2B2E;
 	background-color: rgba(0, 0, 0, 0.025);
@@ -43,9 +43,9 @@ body::selection {
 #spn {
 	border-radius: 20px;
 	display: inline;
-	margin: 30px;
+	margin: 1.875rem;
 	font-size: 18pt;
-	padding: 10px;
+	padding: 0.625rem;
 	transition: background 0.3s linear;
 
 }
@@ -106,7 +106,7 @@ body::selection {
 	box-shadow: 0px 10px 12.5px 1px #f68934;
 	margin-left: 5%;
 	/*position: fixed;*/
-	padding: 10px;
+	padding: 0.625rem;
 	padding-top: 0px;
 	border-radius: 7px 7px 7px 7px;
 }
@@ -153,8 +153,8 @@ ul.first_list li ul{
 ul.first_list li:hover ul {
 	display: block;
 	position: absolute;
-	top: 8%;
-	left: 18.2%;
+	top: 3.9rem;
+	left: 21%;
 	border-radius: 10px;
 	background-color: rgba(100, 225, 225, 0.9);	
 	z-index: 1000;
@@ -163,8 +163,8 @@ ul.first_list li:hover ul {
 .hover_li {
 	list-style: none;
 	border-radius: 14px;
-	margin: 10px;
-	padding: 6px;
+	margin: 0.625rem;
+	padding: 0.375rem;
 	transition: background 0.3s linear;
 	color: #3A2B2E;
 }
@@ -172,10 +172,10 @@ ul.first_list li:hover ul {
 .hover_li:hover {
 	background: #F3F3F3;
 	border-radius: 15px;
-	margin: 10px;
-	padding: 6px;
+	margin: 0.625rem;
+	padding: 0.375rem;
 }
 
 .hover_ul {
-	padding: 10px;
+	padding: 0.625rem;
 }
